// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<header
  className="layout-page-header-panel concise-issues-list-header"
>
  <div
    className="layout-page-header-panel-inner concise-issues-list-header-inner display-flex-center display-flex-space-between"
  >
    <PageShortcutsTooltip
      leftLabel="issues.to_navigate_back"
      metaModifierLabel="issues.to_navigate_issue_locations"
      upAndDownLabel="issues.to_select_issues"
    />
  </div>
</header>
`;

exports[`should render correctly: loading 1`] = `
<header
  className="layout-page-header-panel concise-issues-list-header"
>
  <div
    className="layout-page-header-panel-inner concise-issues-list-header-inner display-flex-center display-flex-space-between"
  >
    <PageShortcutsTooltip
      leftLabel="issues.to_navigate_back"
      metaModifierLabel="issues.to_navigate_issue_locations"
      upAndDownLabel="issues.to_select_issues"
    />
    <i
      className="spinner"
    />
  </div>
</header>
`;

exports[`should render correctly: with back button 1`] = `
<header
  className="layout-page-header-panel concise-issues-list-header"
>
  <div
    className="layout-page-header-panel-inner concise-issues-list-header-inner display-flex-center display-flex-space-between"
  >
    <BackButton
      disabled={false}
      onClick={[MockFunction]}
    />
    <PageShortcutsTooltip
      leftLabel="issues.to_navigate_back"
      metaModifierLabel="issues.to_navigate_issue_locations"
      upAndDownLabel="issues.to_select_issues"
    />
  </div>
</header>
`;
